Adds JS minified slim build, refactoring code to make use of this library: need to add update of out elements based on encrypted char output.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			<form id="input_form" action="">
 				<fieldset id="user_input_message">
 					<legend>Enter your message – to <em>encode</em> or <em>decode</em> here:</legend>
-					<input id="user_char_1" type="text" maxlength="1">
+					<input id="user_char_1" type="text" maxlength="1" class="user-input">
 				</fieldset>
 				<fieldset>
 					<legend>Select your cipher key, and modulus here:</legend>
@@ -82,6 +82,10 @@
 		</section>
 	</main>
 	<footer></footer>
+<script
+  src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+  integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8="
+  crossorigin="anonymous"></script>
 <script src="js/app.js"></script>
 </body>
 </html>
