removes decode and cipher modulus options from index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 			height: 300px;
 		}
 		section {
-			display: table;
+				display: table;
 			    margin: auto;
 		}
 		form {
@@ -67,11 +67,11 @@
 					<legend>Select your cipher key, and modulus here:</legend>
 					<label for="user_cipher_key">Cipher Key: </label>
 					<input id="user_cipher_key" type="number" name="cipher-key" min="1" max="99">
-					<label for="User_cipher_modulus">Cipher Modulus: </label>
-					<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99">
+					<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
+					<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
 				</fieldset>
 				<button id="encrypt_button" type="button">Encypher</button>
-				<button id="decode_button" type="button">Decode</button>
+				<!-- <button id="decode_button" type="button">Decode</button> -->
 			</form>
 		</section>
 		<section id="output_section">
