Adds Jasmine testing framework - standalone

--- a/index.html
+++ b/index.html
@@ -60,11 +60,11 @@
 		<section id="input_section">
 			<form id="input_form" action="">
 				<fieldset id="user_input_message">
-					<legend>Enter your message – to <em>encode</em> or <em>decode</em> here:</legend>
+					<legend>Enter your message to <em>encode</em> here:</legend>
 					<input id="user_char_1" type="text" maxlength="1" class="user-input">
 				</fieldset>
 				<fieldset>
-					<legend>Select your cipher key, and modulus here:</legend>
+					<legend>Select your cipher key:</legend>
 					<label for="user_cipher_key">Cipher Key: </label>
 					<input id="user_cipher_key" type="number" name="cipher-key" min="1" max="99">
 					<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
