--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
 					<legend>Enter your message to <em>encode</em> here:</legend>
 					<input id="user_char_1" type="text" maxlength="1" class="user-input">
 				</fieldset>
-				<fieldset>
+				<fieldset id="encrypt_key_list">
 					<legend>Select your cipher key:</legend>
 					<label for="user_cipher_key">Cipher Key: </label>
-					<input id="user_cipher_key" type="number" name="cipher-key" min="1" max="99">
+
 					<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
 					<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
 				</fieldset>
