Fixes validation error in index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			padding-right: 9.75px; /* From browser user agent */
 		}
 	</style>
-<head>
+</head>
 	<meta charset="UTF-8">
 	<title>Caesar Cipher</title>
 </head>
