--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+	<meta charset="UTF-8">
+	<title>Caesar Cipher</title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<style>
 		html, body {
 			height: 100%;
@@ -55,9 +58,6 @@
 			padding-right: 9.75px; /* From browser user agent */
 		}
 	</style>
-</head>
-	<meta charset="UTF-8">
-	<title>Caesar Cipher</title>
 </head>
 <body>
 	<header>
