Adds external stylesheet, with radial gradient class in ABEM style.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<meta charset="UTF-8">
 	<title>Caesar Cipher</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="css/styles.css">
 	<style>
 		html, body {
 			height: 100%;
@@ -10,6 +11,7 @@
 		body {
 			font-family: Arial, sans-serif;
 			text-align: center;
+
 		}
 		main {
 			height: 300px;
@@ -59,7 +61,7 @@
 		}
 	</style>
 </head>
-<body>
+<body class="bg-gradient -radial">
 	<header>
 		<h1>I came, I saw, I encrypted.</h1>
 	</header>
