makes copy changes to index.html

--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 				<form action="#" onsubmit="return false;" id="encrypt_form_textfield">
 					<textarea name="plain-input" id="plain_input" cols="30" rows="5"></textarea>
 					<fieldset id="encrypt_key_list_2">
-						<legend>Select the key used to <i>encrypt</i> the original message</legend>
+						<legend>Select your cipher key:</legend>
 						<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
 						<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
 					</fieldset>
