adds copy to clipboard, for non-focusable elements, for encrytped messages.

--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
 			<section>
 				<h3>Your encrypted message:</h3>
 				<output id="encrypted_output_2" name="encrypted-output" for="plain_input encrypt_key_list_2" form="encrypt_form_textfield"></output>
+				<button id="copy_encrypted" >Copy to clip-board</button>
 			</section>
 
 			</section>
