repairs error in previous 'virtual' solution, by actualyl iserting input element into DOM, positioned off-secreen absolutely; also removes text-box input first section.

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		<h1>I came, I saw, I encrypted.</h1>
 	</header>
 	<main>
-		<section>
+		<section style="display:none">
 			<h2>Encryption</h2>
 			<section id="input_section">
 				<h3 class="table-row">Input</h3>
