alters markup in index.html to avoid bad parsing.

--- a/index.html
+++ b/index.html
@@ -116,13 +116,13 @@
 					</fieldset>
 					<fieldset id="encrypt_key_list">
 						<legend>Select your cipher key:</legend>
-						<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
-						<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
+						<label for="User_cipher_modulus">Cipher Modulus: </label>
+						<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> 
 					</fieldset>
 					<button id="encrypt_button" type="button">Encypher</button>
-					<!-- <button id="decode_button" type="button">Decode</button> -->
+					<button id="decode_button" type="button">Decode</button> 
 				</form>
-			</section>
+			</section> 
 			<section id="output_section">
 				<h3 class="">Output</h3>
 				<fieldset class="output-group">
@@ -130,11 +130,10 @@
 
 				</fieldset>
 			</section>
-		<!-- </section> -->		
+		</section> -->		
 
 		<section id="encrypt" class="encryption">
 			<div class="box-shadow-3 -fake -blck">&nbsp;</div>
-
 			<h2>Encryption</h2>
 			<section id="input_section_textfield">
 				<h3 class="">Input</h3><section>
@@ -152,8 +151,6 @@
 				<h3>Your encrypted message:</h3>
 				<output id="encrypted_output_2" name="encrypted-output" for="plain_input encrypt_key_list_2" form="encrypt_form_textfield"></output>
 				<button id="copy_encrypted" >Copy to clip-board</button>
-			</section>
-
 			</section>
 		</section>
 
