--- a/index.html
+++ b/index.html
@@ -138,15 +138,15 @@
 
 			<section id="input_section_textfield">
 				<h3 class="">Input</h3>
-				<form action="#" onsubmit="return false;" id="encrypt_form_textfield">
-					<textarea name="plain-input" id="plain_input" cols="30" rows="5"></textarea>
+				<form action="#" id="encrypt_form">
+					<textarea name="plain-input" id="plain_input" cols="35" rows="5"></textarea>
 					<fieldset>
 						<legend>&nbsp;Select a cipher key to <em>encrypt</em> your message&nbsp;</legend>			
 						<select name="encrypt-keys" id="encrypt_key_list_2"></select>			
 						<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
 						<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
+						<input id="encrypt_button_2" type="submit" value="Encrypt" />
 					</fieldset>
-					<button id="encrypt_button_2" type="submit">Encrypt</button>
 				</form>
 			</section>
 			<section>
@@ -169,15 +169,15 @@
 			<p>Please enter the text you want to decrypt, and select the key that was used to encrypt it.</p>
 			<section>
 				<h3 class="">Input</h3>
-				<form action="#" onsubmit="return false;" id="decrypt_form">
-				<textarea name="encrypted-input" id="encrypted_input" cols="30" rows="5"></textarea>
+				<form action="#" id="decrypt_form">
+				<textarea name="encrypted-input" id="encrypted_input" cols="35" rows="5"></textarea>
 				<fieldset id="">
-					<legend>&nbsp;Select the key used to <i>encrypt</i> the original message&nbsp;</legend>
+					<legend>&nbsp;Select the key used to <i>encrypt</i> the message&nbsp;</legend>
 					<select name="decrypt-keys" id="decrypt_key_list"></select>
 					<!-- <label for="User_cipher_modulus">Cipher Modulus: </label>
 					<input id="user_cipher_modulus" type="number" name="cipher-modulus" min="1" max="99"> -->
-				</fieldset>
-				<button id="decrypt_button" type="submit">Decrypt</button>
+					<input id="decrypt_button" type="submit" value="Decrypt" />
+				</fieldset> 
 			</form>
 			</section>
 			<section id="decrypted_output_section">
